# ppi-server

./: ProjectHome.md  README.md
ppi-server/src/: CMakeLists.txt  main.cpp  starter.cpp
ppi-server/src/database/: Database.cpp  DefaultChipConfigReader.cpp  DefaultChipConfigReader.h
ppi-server/src/logger/: LogThread.cpp  LogThread.h
ppi-server/src/pattern/server/: ISocketTransferPattern.h  ITransferPattern.h
ppi-server/src/pattern/util/: iinterlacedactionpropertypattern.h  ipropertypattern.h
ppi-server/src/ports/: OwfsPort.cpp  measureThread.cpp  measuredness.cpp  resistancemeasure.cpp  shell.cpp  switch.cpp  switchcontact.cpp  tempmeasure.cpp  timemeasure.cpp  timemeasure.h  valueholder.cpp
ppi-server/src/portserver/: maximchipaccess.cpp  owserver.cpp
ppi-server/src/server/: ClientTransaction.cpp  SocketServerConnection.cpp
ppi-server/src/util/: CalculatorContainer.cpp  Thread.cpp  actionproperties.cpp  configpropertycasher.cpp  exception.h  interlacedproperties.cpp  interlacedproperties.h  process.cpp  properties.cpp
server/: CMakeLists.txt  INSTALL  INSTALL_OWFS  RELEASE.NOTES  TODO.LIST  ppi-server_debian-init  ppi-server_ubuntu.conf
server/client/: configure.desktop  layout_description.txt
server/client/configure/: transmitter.desktop
server/client/configure/transmitter/: Hauppauge.conf  Hauppauge.desktop  Hauppauge[1].desktop  Hauppauge_350.desktop  Hauppauge_WinTV_Nexus_MINUS_S.desktop  SONY_CMT_MINUS_CP100.desktop  hauppauge_pvr.desktop  k8055.desktop  stringtest.desktop  switch.desktop
server/cmake/: install.sh
server/conf/: access.conf  default.conf  defaultmaxim.conf  eclipse_Kolli[built-in].xml  eclipse_ppi-server_filedoctemplate.xml  measure.conf  server.conf
server/conf/examples/: components.conf  components.desktop  subroutines.conf  subroutines.desktop
server/conf/examples/COM/: com.conf
server/conf/examples/vellemann/: k8055.conf  k8055.desktop
server/data/: .used.txt
server/lib/: .used.txt
server/log/: .used.txt
server/movetest/before_line/src/: testmain.cpp
server/movetest/new_dir/src/: testmain.cpp
server/movetest/src/: testmain.cpp
server/src/: CMakeLists.txt  MeasureThreadCounter.cpp  MeasureThreadCounter.h  ProcessChecker.cpp  ProcessChecker.h  main.cpp  starter.cpp  starter.cpp_newer  starter.h
server/src/client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
server/src/client/lib/: CMakeLists.txt  ClientTransaction.cpp  ClientTransaction.h  IClientTransactionPattern.h  IHearingThreadPattern.h  hearingthread.cpp  hearingthread.h
server/src/config/: CMakeLists.txt  DbTimeChecker.cpp  DbTimeChecker.h  LircSupport.cpp  LircSupport.h  MinMaxTimes.cpp  MinMaxTimes.h  OwfsSupport.cpp  OwfsSupport.h  configmain.cpp
server/src/database/: CMakeLists.txt  Database.cpp  Database.h  DatabaseThread.cpp  DatabaseThread.h  DefaultChipConfigReader.cpp  DefaultChipConfigReader.h  ServerDbTransaction.cpp  ServerDbTransaction.h  databasemain.cpp
server/src/database/lib/: CMakeLists.txt  Database.cpp  Database.h  DatabaseFactory.cpp  DatabaseFactory.h  DatabaseThinning.cpp  DatabaseThinning.h  DbInterface.cpp  DbInterface.h  NeedDbChanges.cpp  NeedDbChanges.h
server/src/database/logger/: CMakeLists.txt  LogProcess.cpp  LogThread.cpp  LogThread.h  loggermain.cpp
server/src/logger/: CMakeLists.txt  LogInterface.cpp  LogInterface.h  LogProcess.cpp  LogProcess.h  LogThread.cpp  LogThread.h  loggermain.cpp
server/src/logger/lib/: CMakeLists.txt  LogConnectionChecker.cpp  LogConnectionChecker.h  (+4 more)
server/src/ports/: CMakeLists.txt  DbFiller.cpp  DbFiller.h  DbFillerCache.cpp  DbFillerCache.h  DbFillerFactory.cpp  DbFillerFactory.h  ExternPort.cpp  ExternPort.h  Informer.cpp  Informer.h  LircPort.cpp  LircPort.h  ListCalculator.cpp  ListCalculator.h  MeasureInformerCache.cpp  MeasureInformerCache.h  OwfsPort.cpp  OwfsPort.h  ReadWorker.cpp  ReadWorker.h  SaveSubValue.cpp  SaveSubValue.h  Set.cpp  Set.h  SubroutineSubVarHolder.cpp  SubroutineSubVarHolder.h  contactpin.cpp  contactpin.h  counter.cpp  counter.h  measureThread.cpp  measureThread.h  measuredness.cpp  measuredness.h  output.cpp  output.h  portbaseclass.cpp  portbaseclass.h  read.cpp  (+17 more)
server/src/portserver/: CMakeLists.txt  ExternPorts.cpp  ExternPorts.h  KernelModule.cpp  KernelModule.h  LircClient.cpp  LircClient.h  OwServerQuestions.cpp  OwServerQuestions.h  ShellWriter.cpp  ShellWriter.h  VellemannK8055.cpp  VellemannK8055.cpp.sav001  VellemannK8055.h  irsend.cpp  irsend.h  maximchipaccess.cpp  maximchipaccess.h  owreadermain.cpp  owserver.cpp  owserver.h
server/src/server/: CMakeLists.txt  ClientTransaction.cpp  ClientTransaction.h  Communication.cpp  Communication.h  FileDescriptor.cpp  FileDescriptor.h  OutsideClientTransaction.cpp  OutsideClientTransaction.h  ServerMethodTransaction.cpp  ServerMethodTransaction.h  ServerProcess.cpp  ServerProcess.h  ServerThread.cpp  ServerThread.h  ServerTransaction.cpp  ServerTransaction.h  SocketClientConnection.cpp  SocketClientConnection.h  SocketServerConnection.cpp  SocketServerConnection.h  TcpServerConnection.h  communicatemain.cpp  communicationthreadstarter.cpp  communicationthreadstarter.h  hearingthread.cpp  hearingthread.h  internetservermain.cpp
server/src/util/: CMakeLists.txt  CalculatorContainer.cpp  CalculatorContainer.h  Calendar.cpp  Calendar.h  CommandExec.cpp  CommandExec.h  ExternClientInputTemplate.cpp  ExternClientInputTemplate.h  GlobalStaticMethods.cpp  GlobalStaticMethods.h  IMethodStringStream.h  IParameterStringStream.cpp  IParameterStringStream.h  MainParams.cpp  MainParams.h  OMethodStringStream.h  OParameterStringStream.cpp  ParamCommand.cpp  ParamCommand.h  ProcessInterfaceTemplate.cpp  ProcessInterfaceTemplate.h  ProcessStarter.cpp  ProcessStarter.h  RunningStoppingInterfaceTemplate.cpp  RunningStoppingInterfaceTemplate.h  StatusLogRoutine.cpp  StatusLogRoutine.h  Terminal.cpp  Terminal.h  Thread.cpp  Thread.h  URL.cpp  URL.h  UserManagementInitialization.h  XMLStartEndTagReader.cpp  actionproperties.cpp  actionproperties.h  configpropertycasher.cpp  configpropertycasher.h  (+17 more)
(+399 files in other folders)
